# serializer version: 1
# name: test_build_test_scenarios[example0]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-961b4c22/example-961b4c22-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_961b4c22"]
        
        [project]
        name = "example-961b4c22"
        version = "0.0.0"
        dependencies = [
            '''example-a-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/src/example_961b4c22/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_961b4c22"]
        
        [project]
        name = "example-a-961b4c22"
        version = "1.0.0"
        dependencies = [
            '''example-b-961b4c22>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/src/example_a_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "3.0.0"
        dependencies = [
            '''example-c-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-961b4c22/example_961b4c22-0.0.0.tar.gz': 'md5:c623a99299b9af5baa182903e5cc23a8',
      'dist/example-961b4c22/example_a_961b4c22-1.0.0-py3-none-any.whl': 'md5:b08225196dab082ef56cfd200be09e0c',
      'dist/example-961b4c22/example_a_961b4c22-1.0.0.tar.gz': 'md5:ab066ac0b68cfff19bcc2e8956c365ed',
      'dist/example-961b4c22/example_b_961b4c22-1.0.0-py3-none-any.whl': 'md5:d5671062b6263efec113c4a48722e3f8',
      'dist/example-961b4c22/example_b_961b4c22-1.0.0.tar.gz': 'md5:3f028fa3710a02f7c913b2f9d87c0ece',
      'dist/example-961b4c22/example_b_961b4c22-2.0.0-py3-none-any.whl': 'md5:1af716031481e9892c3043c65b315688',
      'dist/example-961b4c22/example_b_961b4c22-2.0.0.tar.gz': 'md5:96c95899375aad77792ffe596c18727b',
      'dist/example-961b4c22/example_b_961b4c22-3.0.0-py3-none-any.whl': 'md5:9d6c858ff25fa695b68a09914fd5f0de',
      'dist/example-961b4c22/example_b_961b4c22-3.0.0.tar.gz': 'md5:4f2848a296b07dde840aaa9f317fdf6e',
      'tree': '''
        test_build_test_scenarios_exam0
        ├── build
        │   └── example-961b4c22
        │       ├── example-961b4c22-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_961b4c22
        │       │           └── __init__.py
        │       ├── example-a-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_961b4c22
        │       │           └── __init__.py
        │       ├── example-b-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_961b4c22
        │       │           └── __init__.py
        │       ├── example-b-961b4c22-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_961b4c22
        │       │           └── __init__.py
        │       └── example-b-961b4c22-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_961b4c22
        │                   └── __init__.py
        └── dist
            └── example-961b4c22
                ├── example_961b4c22-0.0.0.tar.gz
                ├── example_a_961b4c22-1.0.0-py3-none-any.whl
                ├── example_a_961b4c22-1.0.0.tar.gz
                ├── example_b_961b4c22-1.0.0-py3-none-any.whl
                ├── example_b_961b4c22-1.0.0.tar.gz
                ├── example_b_961b4c22-2.0.0-py3-none-any.whl
                ├── example_b_961b4c22-2.0.0.tar.gz
                ├── example_b_961b4c22-3.0.0-py3-none-any.whl
                └── example_b_961b4c22-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-961b4c22
  
    ''',
  })
# ---
# name: test_build_test_scenarios[example1]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-toml-4a4ede4d/example-toml-4a4ede4d-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-4a4ede4d-0.0.0/pyproject.toml': 'md5:a531b7b0544fb70b1c705bbda8a6724c',
      'build/example-toml-4a4ede4d/example-toml-4a4ede4d-0.0.0/src/example_toml_4a4ede4d/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-a-4a4ede4d-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-a-4a4ede4d-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_a_4a4ede4d"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_a_4a4ede4d"]
        
        [project]
        name = "example-toml-a-4a4ede4d"
        version = "1.0.0"
        dependencies = [
            '''example-toml-b-4a4ede4d>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-a-4a4ede4d-1.0.0/src/example_toml_a_4a4ede4d/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_4a4ede4d"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_4a4ede4d"]
        
        [project]
        name = "example-toml-b-4a4ede4d"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-1.0.0/src/example_toml_b_4a4ede4d/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_4a4ede4d"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_4a4ede4d"]
        
        [project]
        name = "example-toml-b-4a4ede4d"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-2.0.0/src/example_toml_b_4a4ede4d/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_toml_b_4a4ede4d"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_toml_b_4a4ede4d"]
        
        [project]
        name = "example-toml-b-4a4ede4d"
        version = "3.0.0"
        dependencies = [
            '''example-toml-c-4a4ede4d''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-toml-4a4ede4d/example-toml-b-4a4ede4d-3.0.0/src/example_toml_b_4a4ede4d/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-toml-4a4ede4d/example_toml_4a4ede4d-0.0.0.tar.gz': 'md5:b1bca6825276fa8bf4d5b9e48586b338',
      'dist/example-toml-4a4ede4d/example_toml_a_4a4ede4d-1.0.0-py3-none-any.whl': 'md5:f79d086336d205c960e26ea13bbe2d01',
      'dist/example-toml-4a4ede4d/example_toml_a_4a4ede4d-1.0.0.tar.gz': 'md5:120b7924b813c094e0ae1661cf4d90c1',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-1.0.0-py3-none-any.whl': 'md5:1c56e586db3b49bc418a73a6e71aa725',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-1.0.0.tar.gz': 'md5:e5cde4a65a4ceed7f25772c1d170f53b',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-2.0.0-py3-none-any.whl': 'md5:046f5ff1261d5507c030ca555eda4119',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-2.0.0.tar.gz': 'md5:df6a3922cf54ee7e746dddd59b8b98a9',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-3.0.0-py3-none-any.whl': 'md5:ab3216e8426d1a9992e88e9f1a8e6614',
      'dist/example-toml-4a4ede4d/example_toml_b_4a4ede4d-3.0.0.tar.gz': 'md5:e1f9cbf7e0fe50cba02f1a7a5838c5a3',
      'tree': '''
        test_build_test_scenarios_exam1
        ├── build
        │   └── example-toml-4a4ede4d
        │       ├── example-toml-4a4ede4d-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_4a4ede4d
        │       │           └── __init__.py
        │       ├── example-toml-a-4a4ede4d-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_a_4a4ede4d
        │       │           └── __init__.py
        │       ├── example-toml-b-4a4ede4d-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_b_4a4ede4d
        │       │           └── __init__.py
        │       ├── example-toml-b-4a4ede4d-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_toml_b_4a4ede4d
        │       │           └── __init__.py
        │       └── example-toml-b-4a4ede4d-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_toml_b_4a4ede4d
        │                   └── __init__.py
        └── dist
            └── example-toml-4a4ede4d
                ├── example_toml_4a4ede4d-0.0.0.tar.gz
                ├── example_toml_a_4a4ede4d-1.0.0-py3-none-any.whl
                ├── example_toml_a_4a4ede4d-1.0.0.tar.gz
                ├── example_toml_b_4a4ede4d-1.0.0-py3-none-any.whl
                ├── example_toml_b_4a4ede4d-1.0.0.tar.gz
                ├── example_toml_b_4a4ede4d-2.0.0-py3-none-any.whl
                ├── example_toml_b_4a4ede4d-2.0.0.tar.gz
                ├── example_toml_b_4a4ede4d-3.0.0-py3-none-any.whl
                └── example_toml_b_4a4ede4d-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-toml-4a4ede4d
  
    ''',
  })
# ---
# name: test_build_test_scenarios[example2]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-yaml-4692130b/example-yaml-4692130b-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-4692130b-0.0.0/pyproject.toml': 'md5:47ff40e1cb004e6b8e2a196c83b3d5d5',
      'build/example-yaml-4692130b/example-yaml-4692130b-0.0.0/src/example_yaml_4692130b/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-yaml-4692130b/example-yaml-a-4692130b-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-a-4692130b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_a_4692130b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_a_4692130b"]
        
        [project]
        name = "example-yaml-a-4692130b"
        version = "1.0.0"
        dependencies = [
            '''example-yaml-b-4692130b>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-4692130b/example-yaml-a-4692130b-1.0.0/src/example_yaml_a_4692130b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_4692130b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_4692130b"]
        
        [project]
        name = "example-yaml-b-4692130b"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-1.0.0/src/example_yaml_b_4692130b/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_4692130b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_4692130b"]
        
        [project]
        name = "example-yaml-b-4692130b"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-2.0.0/src/example_yaml_b_4692130b/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_yaml_b_4692130b"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_yaml_b_4692130b"]
        
        [project]
        name = "example-yaml-b-4692130b"
        version = "3.0.0"
        dependencies = [
            '''example-yaml-c-4692130b''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-yaml-4692130b/example-yaml-b-4692130b-3.0.0/src/example_yaml_b_4692130b/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-yaml-4692130b/example_yaml_4692130b-0.0.0.tar.gz': 'md5:99ffbae55dd5142f1dc948380b457b4f',
      'dist/example-yaml-4692130b/example_yaml_a_4692130b-1.0.0-py3-none-any.whl': 'md5:28315840a7506c6077ab74c589437c07',
      'dist/example-yaml-4692130b/example_yaml_a_4692130b-1.0.0.tar.gz': 'md5:78dbe472c29db060370a4d50c5335480',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-1.0.0-py3-none-any.whl': 'md5:d67abed60ef9014f50aea61f14f9a820',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-1.0.0.tar.gz': 'md5:82f96b858ab3d4d62ce86c1a2ab289d7',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-2.0.0-py3-none-any.whl': 'md5:9ab50662b3a10df3781df269b7ba241b',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-2.0.0.tar.gz': 'md5:364a1fa5c28c5d6cbd3ece996446b985',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-3.0.0-py3-none-any.whl': 'md5:9f737cd9adbcf989b2586a3d08f85414',
      'dist/example-yaml-4692130b/example_yaml_b_4692130b-3.0.0.tar.gz': 'md5:7ee04b9b16fff97c4c61e1eaf8aa8948',
      'tree': '''
        test_build_test_scenarios_exam2
        ├── build
        │   └── example-yaml-4692130b
        │       ├── example-yaml-4692130b-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_4692130b
        │       │           └── __init__.py
        │       ├── example-yaml-a-4692130b-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_a_4692130b
        │       │           └── __init__.py
        │       ├── example-yaml-b-4692130b-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_b_4692130b
        │       │           └── __init__.py
        │       ├── example-yaml-b-4692130b-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_yaml_b_4692130b
        │       │           └── __init__.py
        │       └── example-yaml-b-4692130b-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_yaml_b_4692130b
        │                   └── __init__.py
        └── dist
            └── example-yaml-4692130b
                ├── example_yaml_4692130b-0.0.0.tar.gz
                ├── example_yaml_a_4692130b-1.0.0-py3-none-any.whl
                ├── example_yaml_a_4692130b-1.0.0.tar.gz
                ├── example_yaml_b_4692130b-1.0.0-py3-none-any.whl
                ├── example_yaml_b_4692130b-1.0.0.tar.gz
                ├── example_yaml_b_4692130b-2.0.0-py3-none-any.whl
                ├── example_yaml_b_4692130b-2.0.0.tar.gz
                ├── example_yaml_b_4692130b-3.0.0-py3-none-any.whl
                └── example_yaml_b_4692130b-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-yaml-4692130b
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example0]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp0
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-961b4c22
      ├── environment
      │   └── python3.8
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example1]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp1
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-toml-4a4ede4d
      ├── environment
      │   └── python3.8
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
# name: test_view_test_scenarios[example2]
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'tree': '''
        test_view_test_scenarios_examp2
        
        0 directories
  
      ''',
    }),
    'stderr': '',
    'stdout': '''
      example-yaml-4692130b
      ├── environment
      │   └── python3.8
      ├── root
      │   └── requires a
      │       └── satisfied by a-1.0.0
      ├── a
      │   └── a-1.0.0
      │       └── requires b>1.0.0
      │           ├── satisfied by b-2.0.0
      │           └── satisfied by b-3.0.0
      └── b
          ├── b-1.0.0
          ├── b-2.0.0
          └── b-3.0.0
              └── requires c
                  └── unsatisfied: no versions for package
      
  
    ''',
  })
# ---
